--- a/FoodDelivery/src/main/resources/templates/profile.html
+++ b/FoodDelivery/src/main/resources/templates/profile.html
@@ -9,6 +9,43 @@
     <link rel="stylesheet" th:href="@{style.css}">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--light-shades);">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/}" style="color: var(--dark-shades);">WEBSITE LOGO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/}"  style="color: var(--dark-shades);">Home</a>
+                </li>
+                <!-- Other nav items -->
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <!-- Conditional display based on user authentication status -->
+                <li class="nav-item" th:if="${user == null}">
+                    <a class="nav-link" th:href="@{/login}" style="color: var(--dark-shades);">Login</a>
+                </li>
+                <li class="nav-item" th:if="${user == null}">
+                    <a class="nav-link" th:href="@{/register}" style="color: var(--dark-shades);">Register</a>
+                </li>
+
+                <li class="nav-item" th:if="${user != null}">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </li>
+                <li class="nav-item" th:if="${user != null}">
+                    <a class="nav-link" th:href="@{/profile(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);">User Profile</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <h2>Users</h2>
 <table th:if="${users != null}">
     <tr th:each="user : ${users}">
@@ -19,6 +56,7 @@
 </table>
 <h2>Restaurants</h2>
 <table>
+    <th><a class="btn btn-primary w-100 mb-2" th:href="@{/restaurant}">Add Restaurant</a></th>
     <tr th:each="restaurant : ${restaurants}">
         <td th:text="${restaurant.name}">Restaurant Name</td>
         <td th:text="${restaurant.getOwnerId().getFirstName()} + ' ' + ${restaurant.getOwnerId().getLastName()()}">Owner Name</td>
