--- a/FoodDelivery/src/main/resources/templates/RestaurantForm.html
+++ b/FoodDelivery/src/main/resources/templates/RestaurantForm.html
@@ -13,47 +13,50 @@
 <div class="card w-100" style="max-width: 400px;">
     <div class="card-body">
         <form class="row g-3" action="/restaurant" method="post">
+            <div class="col-12">
+                <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
+            </div>
             <!-- Restaurant Name Input -->
             <div class="col-12">
                 <label for="inputName" class="form-label">Name</label>
-                <input type="text" class="form-control mb-2" id="inputName" th:name="${restaurant.name}">
+                <input type="text" class="form-control mb-2" id="inputName" name="restaurantName">
             </div>
 
             <!-- Contact Number Input -->
             <div class="col-12">
                 <label for="inputContactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control mb-2" id="inputContactNumber" th:name="${restaurant.contactNumber}">
+                <input type="text" class="form-control mb-2" id="inputContactNumber" name="contactNumber">
             </div>
 
 
             <!-- Street Input -->
             <div class="col-12">
                 <label for="inputStreet" class="form-label">Street</label>
-                <input type="text" class="form-control mb-2" id="inputStreet" th:name="${address.street}">
+                <input type="text" class="form-control mb-2" id="inputStreet" name="street">
             </div>
 
             <!-- City Input -->
             <div class="col-12">
                 <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control mb-2" id="inputCity" th:name="${address.city}">
+                <input type="text" class="form-control mb-2" id="inputCity" name="city">
             </div>
 
             <!-- Province Input -->
             <div class="col-12">
                 <label for="inputProvince" class="form-label">Province</label>
-                <input type="text" class="form-control mb-2" id="inputProvince" th:name="${address.province}">
+                <input type="text" class="form-control mb-2" id="inputProvince" name="province">
             </div>
 
             <!-- Country Input -->
             <div class="col-12">
                 <label for="inputCountry" class="form-label">Country</label>
-                <input type="text" class="form-control mb-2" id="inputCountry" th:name="${address.country}">
+                <input type="text" class="form-control mb-2" id="inputCountry" name="country">
             </div>
 
             <!-- Postal Code Input -->
             <div class="col-12">
                 <label for="inputPostalCode" class="form-label">Postal Code</label>
-                <input type="text" class="form-control mb-2" id="inputPostalCode" th:name="${address.postalCode}">
+                <input type="text" class="form-control mb-2" id="inputPostalCode" name="postalCode">
             </div>
 
             <!-- Submit Button -->
