--- a/FoodDelivery/src/main/resources/templates/profile.html
+++ b/FoodDelivery/src/main/resources/templates/profile.html
@@ -46,10 +46,10 @@
     </div>
 </nav>
 
-<h2>Users</h2>
 <table th:if="${users != null}">
+    <th th:text="Users"></th>
     <tr th:each="user : ${users}">
-        <td th:text="${user.getUsername()()}">User Name</td>
+        <td th:text="${user.getUsername()}">User Name</td>
         <td th:text="${user.getFirstName()} + ' ' + ${user.getLastName()}">Full Name</td>
         <!-- other restaurant details -->
     </tr>
@@ -58,8 +58,8 @@
 <table>
     <th><a class="btn btn-primary w-100 mb-2" th:href="@{/restaurant}">Add Restaurant</a></th>
     <tr th:each="restaurant : ${restaurants}">
-        <td th:text="${restaurant.name}">Restaurant Name</td>
-        <td th:text="${restaurant.getOwnerId().getFirstName()} + ' ' + ${restaurant.getOwnerId().getLastName()()}">Owner Name</td>
+        <td th:text="${restaurant.getName()}">Restaurant Name</td>
+        <td th:text="${restaurant.getOwner().getFirstName()} + ' ' + ${restaurant.getOwner().getLastName()()}">Owner Name</td>
         <!-- other restaurant details -->
     </tr>
 </table>
