--- a/FoodDelivery/src/main/resources/templates/login.html
+++ b/FoodDelivery/src/main/resources/templates/login.html
@@ -20,13 +20,13 @@
 
             <!-- Username/Email Input -->
             <div class="col-12">
-                <label for="inputEmail4" class="form-label">Username/Email</label>
+                <label for="inputEmail4" class="form-label">Username/Email:</label>
                 <input type="text" class="form-control mb-2" id="inputEmail4" name="usernameOrEmail">
             </div>
 
             <!-- Password Input -->
             <div class="col-12">
-                <label for="inputPassword4" class="form-label">Password</label>
+                <label for="inputPassword4" class="form-label">Password:</label>
                 <input type="password" class="form-control mb-2" id="inputPassword4" name="rawPassword">
             </div>
 
