--- a/FoodDelivery/src/main/resources/templates/register.html
+++ b/FoodDelivery/src/main/resources/templates/register.html
@@ -56,7 +56,7 @@
 
             <!-- Phone Number Input -->
             <div class="col-12">
-                <label for="phoneNumber" class="form-label">Confirm Password:</label>
+                <label for="phoneNumber" class="form-label">Phone Number:</label>
                 <input type="tel" class="form-control mb-2" id="phoneNumber" name="phoneNumber" required>
             </div>
 
