--- a/FoodDelivery/src/main/resources/templates/home.html
+++ b/FoodDelivery/src/main/resources/templates/home.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="nav-item" th:if="${user != null}">
-                    <a class="nav-link" th:href="@{/profile(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);"><i class="bi bi-person-circle" style="font-size: 2rem;"></i>User Profile</a>
+                    <a class="nav-link" th:href="@{/profile/{username}(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);"><i class="bi bi-person-circle" style="font-size: 2rem;"></i>User Profile</a>
                 </li>
 
             </ul>
