--- a/FoodDelivery/src/main/resources/templates/register.html
+++ b/FoodDelivery/src/main/resources/templates/register.html
@@ -18,46 +18,68 @@
                 <p th:if="${error != null}" th:text="${error}" class="alert alert-danger" role="alert"></p>
             </div>
 
-            <!-- First Name Input -->
-            <div class="col-6">
-                <label for="firstName" class="form-label">First Name:</label>
-                <input type="text" class="form-control mb-2" id="firstName" name="firstName" required>
-            </div>
+            <div class="row">
+                <!-- Left Column -->
+                <div class="col-md-6">
+                    <!-- First Name, Last Name, Username, Email, Password, Confirm Password, Phone Number, Role -->
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <label for="firstName" class="form-label">First Name:</label>
+                            <input type="text" class="form-control" id="firstName" name="firstName" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="lastName" class="form-label">Last Name:</label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="username" class="form-label">Username:</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="password" class="form-label">Password:</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="confirmPassword" class="form-label">Confirm Password:</label>
+                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="phoneNumber" class="form-label">Phone Number:</label>
+                            <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" required>
+                        </div>
+                    </div>
+                </div>
 
-            <!-- Last Name Input -->
-            <div class="col-6">
-                <label for="lastName" class="form-label">Last Name:</label>
-                <input type="text" class="form-control mb-2" id="lastName" name="lastName" required>
-            </div>
-
-            <!-- Username Input -->
-            <div class="col-12">
-                <label for="username" class="form-label">Username:</label>
-                <input type="text" class="form-control mb-2" id="username" name="username" required>
-            </div>
-
-            <!-- Email Input -->
-            <div class="col-12">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control mb-2" id="email" name="email" required>
-            </div>
-
-            <!-- Password Input -->
-            <div class="col-6">
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control mb-4" id="password" name="password" required>
-            </div>
-
-            <!-- Confirm Password Input -->
-            <div class="col-6">
-                <label for="confirmPassword" class="form-label">Confirm Password:</label>
-                <input type="password" class="form-control mb-4" id="confirmPassword" name="confirmPassword" required>
-            </div>
-
-            <!-- Phone Number Input -->
-            <div class="col-12">
-                <label for="phoneNumber" class="form-label">Phone Number:</label>
-                <input type="tel" class="form-control mb-2" id="phoneNumber" name="phoneNumber" required>
+                <!-- Right Column -->
+                <div class="col-md-6">
+                    <!-- Street, City, Province, Country, Postal Code -->
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <label for="inputStreet" class="form-label">Street</label>
+                            <input type="text" class="form-control" id="inputStreet" name="street" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="inputCity" class="form-label">City</label>
+                            <input type="text" class="form-control" id="inputCity" name="city" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="inputProvince" class="form-label">Province</label>
+                            <input type="text" class="form-control" id="inputProvince" name="province">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputCountry" class="form-label">Country</label>
+                            <input type="text" class="form-control" id="inputCountry" name="country" required>
+                        </div>
+                        <div class="col-12">
+                            <label for="inputPostalCode" class="form-label">Postal Code</label>
+                            <input type="text" class="form-control" id="inputPostalCode" name="postalCode" required>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Submit Button -->
