--- a/FoodDelivery/src/main/resources/templates/home.html
+++ b/FoodDelivery/src/main/resources/templates/home.html
@@ -10,38 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--light-shades);">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}" style="color: var(--dark-shades);">WEBSITE LOGO</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/}"  style="color: var(--dark-shades);">Home</a>
-                </li>
-                <!-- Other nav items -->
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <!-- Conditional display based on user authentication status -->
-                <li class="nav-item" th:if="${user == null}">
-                    <a class="nav-link" th:href="@{/login}" style="color: var(--dark-shades);">Login</a>
-                </li>
-                <li class="nav-item" th:if="${user == null}">
-                    <a class="nav-link" th:href="@{/register}" style="color: var(--dark-shades);">Register</a>
-                </li>
-
-                <li class="nav-item" th:if="${user != null}">
-                    <a class="nav-link" th:href="@{/profile/{username}(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);"><i class="bi bi-person-circle" style="font-size: 2rem;"></i>User Profile</a>
-                </li>
-
-            </ul>
-        </div>
-    </div>
-</nav>
-
-
+<div th:replace="fragments/fragments :: navbar" ></div>
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
