--- a/FoodDelivery/src/main/resources/templates/fragments/fragments.html
+++ b/FoodDelivery/src/main/resources/templates/fragments/fragments.html
@@ -5,35 +5,41 @@
 </head>
 <body>
 <div th:fragment="navbar">
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--light-shades);">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/}" style="color: var(--dark-shades);">WEBSITE LOGO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/}"  style="color: var(--dark-shades);">Home</a>
-                    </li>
-                    <!-- Other nav items -->
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <!-- Conditional display based on user authentication status -->
-                    <li class="nav-item" th:if="${user == null}">
-                        <a class="nav-link" th:href="@{/login}" style="color: var(--dark-shades);">Login</a>
-                    </li>
-                    <li class="nav-item" th:if="${user == null}">
-                        <a class="nav-link" th:href="@{/register}" style="color: var(--dark-shades);">Register</a>
-                    </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" th:href="@{/}">
+            <p id="logo-text" style="font-size: 28px">byte<span class="yellow-dot">.</span></p>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                    <li class="nav-item" th:if="${user != null}">
-                        <a href="/logout" class="btn btn-warning">Logout</a>
-                        <a class="nav-link" th:href="@{/profile/{username}(username=${user.getUsername()})}" th:text="${user.getUsername()}" style="color: var(--dark-shades);"><i class="bi bi-person-circle" style="font-size: 2rem;"></i>User Profile</a>
-                    </li>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <!-- Synchronous search form -->
+                <form class="form-inline my-2 my-lg-0" th:action="@{/search}" method="get">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search Restaurants" aria-label="Search" name="query">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
 
-                </ul>
-            </div>
+                <!-- Logged in User Options -->
+                <li class="nav-item" th:if="${loggedIn}">
+                    <!-- Profile Icon -->
+                    <a class="nav-link" th:href="@{/profile}">
+                        <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
+                    </a>
+                </li>
+                <li class="nav-item" th:if="${loggedIn}">
+                    <!-- Logout Button -->
+                    <form th:action="@{/logout}" method="post">
+                        <button type="submit" class="btn btn-link nav-link">Logout</button>
+                    </form>
+                </li>
+
+                <!-- Not Logged In User Options -->
+                <li class="nav-item" th:if="${!loggedIn}">
+                    <a class="nav-link" th:href="@{/login}">Login/Register</a>
+                </li>
+            </ul>
         </div>
     </nav>
 </div>
