--- a/FoodDelivery/src/main/resources/templates/home.html
+++ b/FoodDelivery/src/main/resources/templates/home.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 
-<div th:replace="fragments/fragments :: navbar" ></div>
-
+<div th:replace="fragments/fragment :: navbar"></div>
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
