--- a/FoodDelivery/src/main/resources/templates/fragments/fragment.html
+++ b/FoodDelivery/src/main/resources/templates/fragments/fragment.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <div th:fragment="navbar">
+    <!-- Your navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" th:href="@{/}">
             <p id="logo-text" style="font-size: 28px">byte<span class="yellow-dot">.</span></p>
@@ -24,21 +25,22 @@
                 <!-- Logged in User Options -->
                 <li class="nav-item" th:if="${loggedIn}">
                     <!-- Profile Icon -->
-                    <a class="nav-link" th:href="@{/profile}">
+                    <a class="nav-link" th:href="@{/profile/{username}(username=${user.getUsername()})}">
                         <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
                     </a>
                 </li>
                 <li class="nav-item" th:if="${loggedIn}">
-                    <!-- Logout Button -->
-                    <form th:action="@{/logout}" method="post">
-                        <button type="submit" class="btn btn-link nav-link">Logout</button>
-                    </form>
+                    <a href="/logout" class="btn btn-warning">Logout</a>
                 </li>
 
                 <!-- Not Logged In User Options -->
                 <li class="nav-item" th:if="${!loggedIn}">
-                    <a class="nav-link" th:href="@{/login}">Login/Register</a>
+                    <a class="nav-link" th:href="@{/login}" style="color: var(--dark-shades);">Login</a>
                 </li>
+                <li class="nav-item" th:if="${!loggedIn}">
+                    <a class="nav-link" th:href="@{/register}" style="color: var(--dark-shades);">Register</a>
+                </li>
+
             </ul>
         </div>
     </nav>
