--- a/FoodDelivery/src/main/resources/templates/fragments/fragment.html
+++ b/FoodDelivery/src/main/resources/templates/fragments/fragment.html
@@ -25,7 +25,7 @@
                 <!-- Logged in User Options -->
                 <li class="nav-item" th:if="${loggedIn}">
                     <!-- Profile Icon -->
-                    <a class="nav-link" th:href="@{/profile/{username}(username=${user.getUsername()})}">
+                    <a class="nav-link" th:href="@{/profile/{username}(username=${user.getUsername()})}" th:text="${user.getUsername()}">
                         <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
                     </a>
                 </li>
