--- a/FoodDelivery/src/main/resources/templates/edit-user.html
+++ b/FoodDelivery/src/main/resources/templates/edit-user.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Your Custom CSS -->
-    <link rel="stylesheet" th:href="@{../style.css}">
+    <link rel="stylesheet" th:href="@{style.css}">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: var(--light-shades);">
